--- a/app/src/pages/inside/filtersPage/filterGrid/filterName/filterName.scss
+++ b/app/src/pages/inside/filtersPage/filterGrid/filterName/filterName.scss
@@ -33,7 +33,8 @@
   }
 
   &.link {
-    color: $COLOR--windows-blue;
+    font-size: 15px;
+    color: $COLOR--topaz;
     cursor: pointer;
 
     &:hover {
